--- a/style.css
+++ b/style.css
@@ -9,8 +9,24 @@ body {
 #timeline {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: 4px;
   margin-top: 2rem;
+}
+
+#navigation {
+  background-color: antiquewhite;
+  padding: 10px;
+  margin: 10px 0px;
+}
+
+.navbtns {
+  margin: 0 10px;
+}
+
+#jeremyshi {
+  background-color: yellow;
+  border-radius: 10px;
+  padding: 2px 10px 2px 10px;
 }
 
 .commit {
